Revert "use HashMap to represent the children of a node"
This reverts commit f6b97aa173b20135d8a82fe47432f41e1e2d1dad.